# search_bdrc

./: README.md  data.json  pyproject.toml  res.json
.github/workflows/: CI.yml
outputs/: MW19999_metadata.ttl  MW21752_metadata.ttl  MW23703_metadata.ttl  O2DB80610.json  O2DB95714.json
outputs/trig/: O2DB80610.trig  O2DB95714.trig
src/search_bdrc/: __init__.py  etext_download.py  extract.py  main.py  outline_formatter.py  travel.py  utils.py
tests/: test_example.py  test_metadata_functions.py
